--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=backend
 
+# JWT Configuration
+jwt.secret=${JWT_SECRET}
+
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/notebridge?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=${DB_USERNAME}
