updated env to use remote database

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,6 +2,7 @@
 JWT_SECRET=your-super-secret-jwt-key-here-make-it-long-and-random
 
 # Database Configuration
+DB_URL=your-database-url
 DB_USERNAME=your-database-username
 DB_PASSWORD=your-database-password
 
