--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,6 +17,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 firebase.project-id=${FIREBASE_PROJECT_ID}
 firebase.storage-bucket=${FIREBASE_STORAGE_BUCKET}
 
-# File upload configuration
+# File Upload Configuration
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+# Redis Configuration
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.cache.type=redis
