--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,3 +10,6 @@ DB_PASSWORD=your-database-password
 FIREBASE_PROJECT_ID=your-firebase-project-id
 FIREBASE_STORAGE_BUCKET=your-firebase-storage-bucket
 
+# Redis
+REDIS_URL=your-redis-url
+
