--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -21,7 +21,11 @@ firebase.storage-bucket=${FIREBASE_STORAGE_BUCKET}
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-# Redis Configuration
-spring.redis.host=localhost
-spring.redis.port=6379
+# Redis Configuration (local)
+# spring.redis.host=localhost
+# spring.redis.port=6379
+# spring.cache.type=redis
+
+# Redis Configuration (remote)
+spring.redis.url=${REDIS_URL}
 spring.cache.type=redis
